# Password-Manager-With-Encryption

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: logic.py
